--- a/views/inforProduct.hbs
+++ b/views/inforProduct.hbs
@@ -15,7 +15,7 @@
                     </div>
             <div>
                 <h2>Name:  {{products.name}}</h2>
-                <p>Author: </p>
+                <p>Author: {{products.author}}</p>
                 <p>Price: {{products.price}}</p>
                 <p>Description: {{products.description}}</p>
             </div>
