--- a/views/updateProfile.hbs
+++ b/views/updateProfile.hbs
@@ -41,13 +41,14 @@
         </div>
         <h2 style="text-align: center;" >Update Profile</h2>
     <div class="container">
-        <div class="input-group input-group-sm mb-3">
+        <form action="updateProfile" method="post">
+            <div class="input-group input-group-sm mb-3">
             <span class="input-group-text" id="inputGroup-sizing-sm">Name</span>
             <input required="true" type="text" class="form-control" name="txtName" value="{{customer.name}}">
         </div>
         <div class="input-group input-group-sm mb-3">
             <span class="input-group-text" id="inputGroup-sizing-sm">Phone Number</span>
-            <input required="true" type="text" class="form-control" name="txtName" value="{{product.name}}">
+            <input required="true" type="text" class="form-control" name="txtPhone" value="{{customer.phone}}">
         </div>
         <div class="form-group" >
                         <label class="form-check form-check-inline">
@@ -61,24 +62,28 @@
                     </div>
         <div class="input-group input-group-sm mb-3">
             <span class="input-group-text" id="inputGroup-sizing-sm">Email address</span>
-            <input required="true" type="text" class="form-control" name="txtName" value="{{product.name}}">
+            {{!-- <input required="true" type="text" class="form-control" name="txtEmail" value="{{oldValues.email}}"> --}}
+            <input required="true" type="email" class="form-control" placeholder="" name="txtEmail" value="{{customer.email}}">
         </div>
         <div class="input-group input-group-sm mb-3">
             <span class="input-group-text" id="inputGroup-sizing-sm">City</span>
-            <input required="true" type="text" class="form-control" name="txtName" value="{{product.name}}">
+            {{!-- <input required="true" type="text" class="form-control" name="txtCity" value="{{oldValues.city}}"> --}}
+            <input required="true" type="text" class="form-control" name="txtCity" value="{{customer.city}}">
         </div>
         <div class="input-group input-group-sm mb-3">
             <span class="input-group-text" id="inputGroup-sizing-sm">Select a country</span>
-            <select class="form-select" aria-label="Default select example">
-                <option selected>Viet Nam</option>
-                <option value="1">Viet Nam</option>
-                <option value="2">China</option>
-                <option value="3">Korea</option>
-                <option value="4">Rusia</option>
-                <option value="5">Turkey</option>
-            </select>       
+            <select id="inputState" class="form-control" name = "txtCountry" value="{{customer.country}}">
+                            <option> Choose...</option>
+                            <option>Uzbekistan</option>
+                            <option>Russia</option>
+                            <option >United States</option>
+                            <option>India</option>
+                            <option selected="">Việt Nam</option>
+                        </select>       
         </div>
-        <button type="button" class="btn btn-primary">Update Profile</button>
+        <input type="submit" value="Update" class = "btn btn-success">
+        {{!-- <button type="button" class="btn btn-primary">Update Profile</button> --}}
+        </form>
     </div>
     <div class="footer">
         <!-- Footer -->
