--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,8 +9,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Home</title>
-    <style>
-        
+    <style>  
     </style>
 </head>
 <body style="background-color: #c9dff182;">
@@ -66,9 +65,9 @@
                                     <div class="card-body h-100">
                                         <a href="/inforProduct?id={{_id}}" style="color: rgb(29, 27, 27); font-size: 1.5rem;"><p class="card-text">{{name}}</p></a>
                                     </div>
-                                    <div class="card-body">
+                                    {{!-- <div class="card-body">
                                         <a href="Cart"><p class="card-text">Mua Ngay</p></a>
-                                    </div>
+                                    </div> --}}
                                     <form action="/buy" method="post">
                                         <input type="hidden" name="txtId" value="{{_id}}">
                                         <button type="submit" class="btn btn-outline-success">Thêm Vào Giỏ Hàng</button>                                      
@@ -190,7 +189,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     
- <script type="text/javascript">
+<script type="text/javascript">
     $(document).ready(function(){
 
     $("#search").on("click", function(e){
