--- a/views/inforProduct.hbs
+++ b/views/inforProduct.hbs
@@ -4,10 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Information Product</title>
 </head>
-<body>
-    <div class="container"> 
+<body style="background-color: #c9dff182;">
+    {{!-- <div class="menu">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light" >
+                <div class="container-fluid">
+                    <a class="navbar-brand" href='/'>BookStore</a>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                            </li>
+                        </ul>
+                        <form class="container" style="display: flex;">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="txtSearchHome" >
+                            <button class="btn btn-outline-success" type="submit" >Search</button>                   
+                        </form>
+                            
+                        {{#if customerI}}
+                        <a style="font-size:smaller;" href="Cart" class="btn btn-info btn-lg"> Cart </a>
+                        <div class="dropdown">
+                        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"> {{customerI.name}}
+                        <span class="caret"></span></button>
+                        <ul class="dropdown-menu">
+                            <li><a href="updateProfile">Edit Profile</a></li>
+                            <li><a href="#">CSS</a></li>
+                            <li><a href="/logout">Log out</a></li>
+                        </ul>
+                        </div>
+                        {{else}}
+                            <form class="d-flex" >
+                                <a class="nav-link" href="/login" style="color: black">Login </a>   
+                                <a class="nav-link" href="/register" style="color: black">Register</a>                     
+                            </form>
+                        {{/if}}
+                        
+                    </div>
+                </div>
+            </nav>
+        </div>
+     --}}
+    
+    {{!-- <div class="container"> 
     <div class="Product">
         <div class="descreption">
                     <div class="img-infor">
@@ -21,6 +65,129 @@
             </div>
         </div>
     </div>
-</div>
+</div> --}}
+
+                    <div class="mt-4">
+                        <div class="row">                 
+                                <div class="card" style="align-items: center; background-color: rgba(146, 207, 231, 0.288)">
+                                    <div class="img-infor">
+                                        <img src="{{products.picURL}}" class="card-img-top" style="width: 12rem; height: 12rem;" alt="..."> 
+                                    </div>
+                                    <div>
+                                        <h2>Name:  {{products.name}}</h2>
+                                        <p>Author: {{products.author}}</p>
+                                        <p>Price: {{products.price}}</p>
+                                        <p>Description: {{products.description}}</p>
+                                    </div>
+                                    <div class="card-body" style="font-size: 1.5rem;">
+                                        <a href='/'><p class="card-text">Home</p></a>
+                                    </div>
+                                </div>
+                                </div>
+                        </div>
+                    </div>
+
+<div class="footer" style="background: rgba(15, 150, 204, 0.301);">
+        <!-- Footer -->
+        <footer class="text-center text-lg-start bg-light text-muted">
+            <!-- Section: Social media -->
+            <section
+                class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
+            >
+                <!-- Left -->
+                <div class="me-5 d-none d-lg-block">
+                    <span>Get connected with us on social networks:</span>
+                </div>
+                <!-- Left -->
+                <!-- Right -->
+                <div>
+                    <a href="" class="me-4 text-reset">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="" class="me-4 text-reset">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="" class="me-4 text-reset">
+                        <i class="fab fa-google"></i>
+                    </a>
+                    <a href="" class="me-4 text-reset">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="" class="me-4 text-reset">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a href="" class="me-4 text-reset">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </div>
+                <!-- Right -->
+            </section>
+            <section class="">
+                <div class="container text-center text-md-start mt-5">
+                    <!-- Grid row -->
+                    <div class="row mt-3">
+                        <!-- Grid column -->
+                        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                        <!-- Content -->
+                        <h6 class="text-uppercase fw-bold mb-4">
+                            <i class="fas fa-gem me-3"></i>Company name
+                        </h6>
+                        <p>
+                            Here you can use rows and columns to organize your footer content. Lorem ipsum
+                            dolor sit amet, consectetur adipisicing elit.
+                        </p>
+                        </div>
+                        <!-- Grid column -->
+                        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                        <!-- Links -->
+                            <h6 class="text-uppercase fw-bold mb-4">
+                                Useful links
+                            </h6>
+                            <p>
+                                <a href="#!" class="text-reset">Pricing</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="text-reset">Settings</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="text-reset">Orders</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="text-reset">Help</a>
+                            </p>
+                        </div>
+                        <!-- Grid column -->
+                        <!-- Grid column -->
+                        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                        <!-- Links -->
+                        <h6 class="text-uppercase fw-bold mb-4">
+                            Contact
+                        </h6>
+                        <p><i class="fas fa-home me-3"></i> Hà Nội</p>
+                        <p>
+                            <i class="fas fa-envelope me-3"></i>
+                            ABC@example.com
+                        </p>
+                        <p><i class="fas fa-phone me-3"></i> + 01 234 567 89</p>
+                        <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+                        </div>
+                        <!-- Grid column -->
+                    </div>
+                    <!-- Grid row -->
+                </div>
+            </section>
+            <!-- Section: Links  -->
+            <!-- Copyright -->
+            <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+                © 2021 Copyright:
+                <a class="text-reset fw-bold" href="https://mdbootstrap.com/">Hello Word</a>
+            </div>
+        <!-- Copyright -->
+        </footer>
+        <!-- Footer -->
+    </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 </html>
