--- a/views/index.hbs
+++ b/views/index.hbs
@@ -36,7 +36,7 @@
                         <span class="caret"></span></button>
                         <ul class="dropdown-menu">
                             <li><a href="updateProfile">Edit Profile</a></li>
-                            <li><a href="#">CSS</a></li>
+                            <li><a href="lichsu">Lich su</a></li>
                             <li><a href="/logout">Log out</a></li>
                         </ul>
                         </div>
@@ -183,8 +183,6 @@
         </footer>
         <!-- Footer -->
     </div>
-    
-    
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
