--- a/views/lichsu.hbs
+++ b/views/lichsu.hbs
@@ -5,57 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Home</title>
-    <style>
-        
-    </style>
+    <title>Lich su mua hang</title>
 </head>
-<body style="background-color: #c9dff182;">
-    <div class="menu">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light" >
-                <div class="container-fluid">
-                    <a class="navbar-brand" href='/'>BookStore</a>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/">Home</a>
-                            </li>
-                        </ul>
-                        <form class="container" style="display: flex;">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="txtSearchHome" >
-                            <button class="btn btn-outline-success" type="submit" >Search</button>                   
-                        </form>
-                            
-                        {{#if customerI}}
-                        <a style="font-size:smaller;" href="Cart" class="btn btn-info btn-lg"> Cart </a>
-                        <div class="dropdown">
-                        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"> {{customerI.name}}
-                        <span class="caret"></span></button>
-                        <ul class="dropdown-menu">
-                            <li><a href="updateProfile">Edit Profile</a></li>
-                            <li><a href="#">CSS</a></li>
-                            <li><a href="/logout">Log out</a></li>
-                        </ul>
-                        </div>
-                        {{else}}
-                            <form class="d-flex" >
-                                <a class="nav-link" href="/login" style="color: black">Login </a>   
-                                <a class="nav-link" href="/register" style="color: black">Register</a>                     
-                            </form>
-                        {{/if}}
-                        
-                    </div>
-                </div>
-            </nav>
-        </div>
-
+<body>
             <div class="container"> 
                 <div class="Product">
                     <div class="mt-4">
                         <div class="row">
-                            {{#each products}}                   
+                            {{#each Orders}}                   
                                 <div class="card" style="width: 15rem; align-items: center; background-color: rgba(236, 238, 93, 0.288)">
                                     <img src="{{picURL}}" class="card-img-top" style="width: 10rem; height: 10rem;" alt="..."> 
                                     <div class="card-body h-100">
@@ -67,14 +27,15 @@
                                     </form>
                                 </div>
                             {{/each}}
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-    </div>
+
     
-    <div class="footer" style="background: rgba(182, 226, 243, 0.856);>
+    <div class="footer" style="background: rgba(15, 150, 204, 0.301);">
         <!-- Footer -->
         <footer class="text-center text-lg-start bg-light text-muted">
             <!-- Section: Social media -->
@@ -86,7 +47,6 @@
                     <span>Get connected with us on social networks:</span>
                 </div>
                 <!-- Left -->
-
                 <!-- Right -->
                 <div>
                     <a href="" class="me-4 text-reset">
@@ -110,9 +70,6 @@
                 </div>
                 <!-- Right -->
             </section>
-            <!-- Section: Social media -->
-
-            <!-- Section: Links  -->
             <section class="">
                 <div class="container text-center text-md-start mt-5">
                     <!-- Grid row -->
@@ -128,7 +85,6 @@
                             dolor sit amet, consectetur adipisicing elit.
                         </p>
                         </div>
-
                         <!-- Grid column -->
                         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
                         <!-- Links -->
@@ -149,7 +105,6 @@
                             </p>
                         </div>
                         <!-- Grid column -->
-
                         <!-- Grid column -->
                         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                         <!-- Links -->
@@ -170,7 +125,6 @@
                 </div>
             </section>
             <!-- Section: Links  -->
-
             <!-- Copyright -->
             <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
                 © 2021 Copyright:
@@ -180,12 +134,8 @@
         </footer>
         <!-- Footer -->
     </div>
-    
-    
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    
-    
 </body>
 </html>
