--- a/views/view.hbs
+++ b/views/view.hbs
@@ -48,7 +48,7 @@
                     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"> {{admin.name}}: {{admin.role}}
                     <span class="caret"></span></button>
                     <ul class="dropdown-menu">
-                        <li><a href="updateProfile">Edit Profile</a></li>
+                        <li><a href="updateProfileAdmin">Edit Profile</a></li>
                         <li><a href="#">CSS</a></li>
                         <li><a href="#">Log out</a></li>
                     </ul>
