--- a/views/view.hbs
+++ b/views/view.hbs
@@ -37,7 +37,7 @@
 			<a class="nav-link active" href="view">View Product</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link " href="#">View User</a>
+			<a class="nav-link " href="adminManagerCustomer">View User</a>
 		</li>
 		<li class="nav-item">
 			<a class="nav-link" href="#">View Order</a>
