--- a/views/addUser.hbs
+++ b/views/addUser.hbs
@@ -19,7 +19,7 @@
                         <div class="card-header">
                             <h3>Enter User information</h3>
                         </div>
-                        
+                        {{messageSCheckA}}
                         <div class="card-body">
                             <div class="col form-group">
                                 <label>Name </label>   
